--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
   <link rel="shortcut icon" href="favicon.ico">
   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.15.0/d3.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.15.0/d3.js"></script>
  <script src="https://d3js.org/d3.v5.min.js"></script> -->
- <script>
-  var consoleLogE=true;
-  var SessionKey='Qsmart2';
-</script>
+  <script>
+    var consoleLogE = true;
+    var SessionKey = 'QKIOSK2';
+  </script>
 </head>
 
 <body>
